# resholve

./: .gitignore  .travis.yml  0001-add_setup_py.patch  0002-add_MANIFEST_in.patch  0003-fix_codegen_shebang.patch  0004-disable-internal-py-yajl-for-nix-built.patch  0005_revert_libc_locale.patch  0006_disable_failing_libc_tests.patch  0007_restore_root_init_py.patch  Bitstein.py  CHANGELOG.md  CODEOWNER  LICENSE  Makefile  Measure.c  Ocaml.default.nix  POSIX_mode_notes  POSIX_mode_notes.py  PS6.nix  README.md  README.nixpkgs.md  Secret chat nós da rua.urg  Wrap.py  ci.nix  content.wwst  default.nix  default_glob.nix  default_glob.py  demo  demos.md  deps.nix  directive.example.nix  fiddle.nix  flake.nix  images_and_data.py  less_simple_fail_a.sh  less_simple_fail_b.sh  less_simple_fail_c.sh  less_simple_success_a.sh  less_simple_success_b.sh  (+28 more)
_resholve/: strings.py
bits/: Abraham_ali_kamal.am  demos.md.mid  demos.md.pre  timings.md.pre
demo/: absolute_path.sh  conftest.py  file_home_source_pwd.sh  file_in_function.sh  source_missing_target.sh  source_present_target.sh  source_var_pwd.sh  test_demo.py  which_simple.sh
docs/: README.md  README.nixpkgs.md  content.wwst  manpage.scss  manpage.wwst  markdown.scss  markdown.wwst  plaintext.scss  resholve.1.txt  strings.scss
examples/: shunit2  shunit2.nix
nixpkgs/: README.md  default.nix  oildev.nix  resholve-utils.nix  resholve.nix  test.nix
tests/: absolute_path.sh  absolute_path_nested.sh  absolute_source.sh  abspath_command.sh  alias_riddle.sh  aliases.sh  assay.sh  bad_word_eval.sh  behavior.bats  buffalo.sh  (+53 more)
(+14 files in other folders)
