[metadata]
name = resholve
version = @version@
description = poopy
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = one, two
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
    resholve
